# TC2-FilterTool

./: README.md
.github/workflows/: filter-engine.yml  pages.yml
crates/filter-engine/: Cargo.toml  README.md
crates/filter-engine/pkg/: filter_engine.d.ts  filter_engine.js  filter_engine_bg.wasm  filter_engine_bg.wasm.d.ts
crates/filter-engine/src/: engine.rs  lib.rs
crates/filter-engine/tests/: golden.rs  port_core.rs  wasm_browser.rs
designer/: fleischertow_window.ui  mainwindow.ui  rc_window.ui  rlc_window.ui
src/: mainwindow.py
src/package/: Dataset.py  Filter.py
src/ui/: case_window.py  fleischertow_window.py  mainwindow.py  rc_window.py  response_window.py  rlc_window.py  tf_window.py
web/: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
web/engine-fixtures/: README.md  assertions.js  fixtures.test.mjs  pyodide-golden.json  schema.json
web/public/python/: Dataset.py  Filter.py  calculusRauchBPass.py  chevisheII.py  transfer_function.py
web/src/: App.svelte  app.css
web/src/components/: BodePlot.svelte  ComparePanel.svelte  FilterPanel.svelte  LoadingBadge.svelte  PlotPanel.svelte  SciInput.svelte  SciInputTest.svelte  Sidebar.svelte  TabBar.svelte
web/src/components/tabs/: GroupDelayTab.svelte  ImpulseTab.svelte  MagnitudeTab.svelte  PhaseTab.svelte  PoleZeroTab.svelte  StagesTab.svelte  StepTab.svelte
web/src/lib/: approx.js  design-io.js  engine-api.ts  time-response.js  worker-client.js
web/src/stores/: app.js
web/src/worker/: pyodide.worker.js  wasm.worker.js
