[package]
name = "filter-engine"
version = "0.1.0"
edition = "2021"
description = "TC2 analog-filter numerical core for native and WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
